[package]
name = "minimal_threading"
version = "0.1.0"
authors = ["Murph Murphy <murph@clurictec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.3"
